Revision history for Ocsinventory::Agent

       * Fix bug with SNMP v3 in 9.pm
       * Fix bug with custom network scanning in Snmp.pm
       * Add retrieve video memory size
       * Fix Bug #1169675 about error message about SSL_verify_mode of SSL_VERIFY_NONE under Fedora 18

2.1rc1
       * Fix Bug #1095989 about a bad regex in Libvirt.pm
       * Fix Bug #1032393 about softwares bot inventoried vi dpkg-query
       * Add custom SNMP MIBs XML copy from sources in postinst.pl
       * Getting monitor serial number in MacOS/Video.pm
       * Add a new configuration option for SSL certificate check in MacOSX agent installer
       * Add new screen codes for edid
       * Fix Bug ##1117110 Missing number of CPU socket
       * Add availibility to reforce a package deployment
       * Code rewrite in Common.pm to prevent sending empty XML tags to OCS server
       * Fix Bug #1086086 about uses of initialized value in Snmp.pm
       * Fix Bug #1087270 about zombie processes when running in daemon mode
       * Fix Bug #1086078 about use of initialized value
       * Fix Bug #1070788 about zip packages support
       * Fix Bug #1045356 about ifconfig parsing issue (Fedora >=17)
       * New availability to scan custom network with SNMP using a network address received from server 
       * Fix Bug #1049626 about Qemu virtualization not detected on proxmox
       * Fix Bug #1040197 about VLAN interface AIX support 
       * Add detect CPU architecture
       * AIX memory module change
       * Add many informations about CPU (l2cachesize, status, socket designation, cores number)
       * Fix Bug #882574 about parsing of dmidecode fails on SMBIOS warning
       * Fix Bug #984699 about the Output of 'ps' in VirtualBox module is displayed in stdout
       * Fix Bug #571655 about the Wrong Sys:Syslog usage
       * Retrieve family, serial number, number of processors, clockrate for BSDsystems
       * New module for inventoring Oracle databases