@@ -9,7 +9,7 @@ sub run {
 
 	foreach(`lspci`){
 
-    	if(/graphics|vga|video/i && /\d\d:\d\d.\d\s([^:]+):\s*(.+?)(?:\(([^()]+)\))?$/i){
+    	if(/graphics|vga|video/i && /(\d\d:\d\d.\d)\s([^:]+):\s*(.+?)(?:\(([^()]+)\))?$/i){
 	  	my $slot = $1;
 		if (defined $slot) {
 			my @detail = `lspci -v -s $slot`;
@@ -17,8 +17,8 @@ sub run {
 				if ($m =~/(.*)Memory(.*=\((\d*)-bit,\sprefetchable\)\s(.*)(\d*)M\]/i) {
 					$memory = $1;
 					$common->addVideo({
-	  					'CHIPSET'  => $1,
-	  					'NAME'     => $2,
+	  					'CHIPSET'  => $2,
+	  					'NAME'     => $3,
 						'MEMORY'   => $memory,
 					});
 				}
