@@ -1,0 +1,8 @@
+package Ocsinventory::Agent::Backend::OS::Generic::Lspci;
+use strict;
+
+sub check {can_run("lsusb")}
+
+
+sub run {}
+1;
