@@ -1,0 +1,52 @@
+package Ocsinventory::Agent::Backend::OS::Linux::Archs::Lsusb::Usb
+
+use strict;
+use Config;
+
+my $vendor;
+my $product;
+my $interface;
+my $bus;
+my $device;
+my $serial;
+my $protocol;
+
+sub run {
+
+	my $params = shift;
+	my $commons = $params->{common};
+
+	foreach (`lsusb`) {
+    	if (/^Bus\s+(\d+)\sDevice\s(\d*):.*/i) {
+        	$bus = $1;
+        	$device = $2;
+        	next if ( grep(/$bus:$device/,qw(001:001 001:002 002:001 002:002 )) );
+        	if (defined $bus && defined $device) {
+            	my @detail = `lsusb -v -s $bus:$device`;
+                foreach my $d (@detail) {
+                    if ($d =~ /^\s*iManufacturer\s*\d\s(\w+)/i) {
+                        $vendor = $1;
+                    } elsif ($d =~ /^\s*idProduct\s*0x(\w+)\s(.*)/i) {
+                        $product = $2;
+                    } elsif ($d =~ /^\s*bInterfaceProtocol\s*\d\s(.*)/i) { 
+                        $protocol = $1 unless defined $protocol || $1 eq 'None';
+                    } elsif ($d =~ /^\siSerial\s*\d\s(.*)/i) {
+                        $serial = $1;
+                    }
+                    #if (defined $protocol) {
+                    #    $interface = $1 if ($protocol =~ /^USB/i);
+                    #}
+                }
+        	}
+    	}
+		# Add information to $current
+		$common->addUsb({
+			'VENDOR'	=>	$vendor,
+			'PRODUCT'	=>	$product,
+			'PROTOCOL'	=>	$protocol,
+			'SERIAL'	=>	$serial,
+		});
+	}
+}
+
+1
